--- a/css/urbseye.css
+++ b/css/urbseye.css
@@ -1,16 +1,26 @@
 * {
 	font-family: 'Ubuntu', sans-serif;
 }
+body {
+    height: 100%;
+}
+html {
+    height:100%;
+}
 #fixed-top-bar {
 	background-color:#FFFFFF;
-}
-body {
-	background-color:#CF4141;
 }
 #splash-screen {
 	overflow: hidden;
 	overflow-y: hidden;
 	overflow-x: hidden;
+}
+.bgR {
+    background-color:#CF4141;
+    height:100%;
+}
+.bgG {
+    background-color: #434343;
 }
 
 /* Specific classes */
@@ -42,6 +52,21 @@ body {
     margin-top: 3px;
     margin-bottom: 4px;
 }
+
+#menu {
+    color:white;
+    font-size: 6vw;
+    height:100%;
+}
+.menu1 td {
+    border-top:0;
+    border-bottom: 0;
+    padding-top: 3vw;
+    padding-bottom: 3vw;
+    margin-top: 5vw;
+    margin-bottom: 5vw;
+}
+
 
 /* General, non-specific classes */
 .font-white {
@@ -97,7 +122,6 @@ body {
     color: inherit;
     text-decoration: none;
 }
-
 
 /* This is the menu button, animated */
 .container {
