--- a/css/urbseye.css
+++ b/css/urbseye.css
@@ -2,9 +2,12 @@
 	font-family: 'Ubuntu', sans-serif;
 }
 body {
+    max-height:100%;
     height: 100%;
+    background-color:#CF4141;
 }
 html {
+    max-height:100%;
     height:100%;
 }
 #fixed-top-bar {
@@ -15,10 +18,9 @@ html {
 	overflow-y: hidden;
 	overflow-x: hidden;
 }
-.bgR {
+/* .bgR {
     background-color:#CF4141;
-    height:100%;
-}
+} */
 .bgG {
     background-color: #434343;
 }
