--- a/css/urbseye.css
+++ b/css/urbseye.css
@@ -5,13 +5,17 @@ body {
     max-height:100%;
     height: 100%;
     background-color:#CF4141;
+    padding-top: 55px;
 }
 html {
     max-height:100%;
     height:100%;
 }
 #fixed-top-bar {
-	background-color:#FFFFFF;
+    background-color:#FFFFFF;
+    box-shadow:  0px 1px 10px 1px rgba(0,0,0,0.4);
+    -webkit-box-shadow: 0px 1px 10px 1px rgba(0,0,0,0.4);
+    -moz-box-shadow: 0px 1px 10px 1px rgba(0,0,0,0.4);
 }
 #splash-screen {
 	overflow: hidden;
@@ -23,6 +27,12 @@ html {
 } */
 .bgG {
     background-color: #434343;
+}
+.bgR2 {
+    background-color: #9b3131;
+}
+.cW {
+    color:white;
 }
 
 /* Specific classes */
