--- a/css/urbseye.css
+++ b/css/urbseye.css
@@ -1,5 +1,6 @@
 * {
 	font-family: 'Ubuntu', sans-serif;
+    overflow-x:hidden;
 }
 body {
     max-height:100%;
@@ -31,6 +32,9 @@ html {
 .bgR2 {
     background-color: #9b3131;
 }
+.bgW {
+    background-color: white;
+}
 .cW {
     color:white;
 }
@@ -44,6 +48,10 @@ html {
    width:60vmin;
    margin-top: -21vmin; /* Half the height */
    margin-left: -30vmin; /* Half the width */
+}
+
+#rota01 div {
+    margin-top:1200px;
 }
 
 .splash-transition1 {
@@ -77,6 +85,25 @@ html {
     padding-bottom: 3vw;
     margin-top: 5vw;
     margin-bottom: 5vw;
+}
+
+#ed_1 {
+    color:white;
+}
+#ed_2 {
+    color:white;
+}
+#ed_3 {
+    color:white;
+}
+#ed_4 {
+    color:white;
+}
+#ed_5 {
+    color:white;
+}
+#ed_6 {
+    color:white;
 }
 
 
@@ -133,6 +160,21 @@ html {
 .text-decor-none:hover {
     color: inherit;
     text-decoration: none;
+}
+td {
+    cursor:pointer;
+}
+.max-h-100 {
+    max-height: 100%;
+}
+
+iframe {
+    height:100%;
+    max-height:100%;
+}
+
+.meio3 {
+    margin-top:-100px;
 }
 
 /* This is the menu button, animated */
